logs/django-syncr.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_syncr-0.50.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/syncr'...
Listing './lib/python3.5/site-packages/syncr/app'...
Compiling './lib/python3.5/site-packages/syncr/app/flickr.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (flickr.py, line 382)
Compiling './lib/python3.5/site-packages/syncr/app/picasaweb.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (picasaweb.py, line 40)
Compiling './lib/python3.5/site-packages/syncr/app/youtube.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (youtube.py, line 123)
Listing './lib/python3.5/site-packages/syncr/brightkite'...
Compiling './lib/python3.5/site-packages/syncr/brightkite/xml2dict.py'...
***   File "./lib/python3.5/site-packages/syncr/brightkite/xml2dict.py", line 77
    print r.result.count.value
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/syncr/delicious'...
Compiling './lib/python3.5/site-packages/syncr/delicious/models.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (models.py, line 29)
Listing './lib/python3.5/site-packages/syncr/doc'...
Listing './lib/python3.5/site-packages/syncr/flickr'...
Listing './lib/python3.5/site-packages/syncr/flickr/templatetags'...
Listing './lib/python3.5/site-packages/syncr/genericfeed'...
Listing './lib/python3.5/site-packages/syncr/googlecode'...
Listing './lib/python3.5/site-packages/syncr/magnolia'...
Compiling './lib/python3.5/site-packages/syncr/magnolia/admin.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (admin.py, line 6)
Compiling './lib/python3.5/site-packages/syncr/magnolia/pymagnolia.py'...
***   File "./lib/python3.5/site-packages/syncr/magnolia/pymagnolia.py", line 95
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/syncr/picasaweb'...
Listing './lib/python3.5/site-packages/syncr/picasaweb/management'...
Listing './lib/python3.5/site-packages/syncr/picasaweb/management/commands'...
Compiling './lib/python3.5/site-packages/syncr/picasaweb/management/commands/sync_picasaweb.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sync_picasaweb.py, line 27)
Listing './lib/python3.5/site-packages/syncr/readernaut'...
Listing './lib/python3.5/site-packages/syncr/tumblr'...
Listing './lib/python3.5/site-packages/syncr/twitter'...
Compiling './lib/python3.5/site-packages/syncr/twitter/models.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (models.py, line 18)
Listing './lib/python3.5/site-packages/syncr/twitter/templatetags'...
Listing './lib/python3.5/site-packages/syncr/youtube'...
Listing './share'...
Listing './share/python-wheels'...
